--- a/docs/latex/orb_cite.bib
+++ b/docs/latex/orb_cite.bib
@@ -100,3 +100,11 @@ howpublished = {\url{https://pdfs.semanticscholar.org/27d4/6db7ed4e96944080052b7
   howpublished = {\url{https://github.com/joan2937/pigpio}},
   commit = {34b33c3bf3c6f302539b9fcd0dfff52bd83a21a5}
 }
+@inproceedings{MooreStouchKeneralizedEkf2014,
+	author    = {T. Moore and D. Stouch},
+	title     = {A Generalized Extended Kalman Filter Implementation for the Robot Operating System},
+	year      = {2014},
+	month     = {July},
+	booktitle = {Proceedings of the 13th International Conference on Intelligent Autonomous Systems (IAS-13)},
+	publisher = {Springer}
+}
